# partial-struct

./: .gitignore  Cargo.toml  README.md
.github/workflows/: licence-check.yml  rust.yml
src/: lib.rs
tests/: compile_fails.rs  create_new.rs
tests/trybuild/: enum.rs  enum.stderr  invalid_command.rs  invalid_command.stderr  multiple_retype.rs  multiple_retype.stderr
