[package]
name = "partial-struct"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "derive"] }

[dev-dependencies]
rustversion = "1.0.18"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
trybuild = "1.0.101"
